unpackaged/main/default/objects/GSR_Change_Failure_Summary__c/GSR_Change_Failure_Summary__c.object-meta.xml
<CustomObject>
    <label>Change Failure Summary</label>
    <nameField>
        <displayFormat>GSRCFS-{00000000}</displayFormat>
        <label>Change Failure Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Failure Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>