unpackaged/main/default/objects/GSR_Change_Failure_Summary__c/fields/Cumulative_Successful_CF_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Successful_CF_Deployments__c</fullName>
    <label>Cumulative Successful CF Deployments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>