unpackaged/main/default/objects/GSR_Change_Failure_Summary__c/fields/Daily_Failure_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Failure_Rate__c</fullName>
    <label>Daily Failure Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>