unpackaged/main/default/objects/GSR_Change_Failure_Summary__c/fields/Running_Change_Failure_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Running_Change_Failure_Percentage__c</fullName>
    <label>Running Change Failure Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>