unpackaged/main/default/objects/GSR_Change_Failure_Summary__c/fields/Successful_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Successful_Deployments__c</fullName>
    <label>Successful Deployments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>