unpackaged/main/default/objects/GSR_Change_Failure_Summary__c/fields/Unsuccessful_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful_Deployments__c</fullName>
    <label>Unsuccessful Deployments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>