unpackaged/main/default/objects/GSR_Change_Failure_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Successful_Deployments__c</columns>
    <columns>Unsuccessful_Deployments__c</columns>
    <columns>Daily_Failure_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>